@@ -1,3 +1,8 @@
+2011-04-22  Peter Spjuth  <peter.spjuth@gmail.com>
+
+	* generic/tkCanvPoly.c: [Bug 3291543] There was a crash if dchars
+	* tests/canvas.test:    removed all coordinates of a polygon.
+
 2011-04-21  Peter Spjuth  <peter.spjuth@gmail.com>
 
 	* doc/checkbutton.n: Document all variable options as global.
